program ekle - programlar

--- a/Public/admin_dashboard.html
+++ b/Public/admin_dashboard.html
@@ -64,6 +64,7 @@
         <h1>Robotum Yönetim Sistemi</h1>
       </div>
       <div class="header-right">
+        <input type="text" class="search-input" placeholder="Ara..." id="searchInput">
         <div class="admin-badge">
           <i>👤</i>
           <span>Admin</span>
